# mastercard-backbank-wrangler-1

./: Cargo.toml  README.md  a.out.wasm  a.out.wat  backbank.php  exec.c  index.rs  jsconfig1.json  lib.rs  package1.json  package11.json  rollup.config.js  rust--toolchain.toml  utils.rs  wrangler.toml
.github/workflows/: main.yml
.githubb/workflows/: main.yml
eglue/: Cargo.toml  lib.rs  libl.rs
notes/: build.js  index.mjs  index2.mjs  jsconfigg.json  package3.json  packageJS.json  packagee.json  packageee.json  rollup2.config.js  webpack.config.js  webpack.json
notes/babel-preset-php/: index.js  trans.js
notes/emscripten/: ReadMe.md  build.js  index.mjs  package.json  shim.mjs
notes/emscripten/src/: main.php  php2cpp.txt  serialBinary.js
src/: ReadMe.md  WASI.mjs  exec.js  ifWAM.mjs  index.mjs  paste.js  shim-metadata.json  shim.mjs
src/notes/: .cf-keys  Makefile  ast.js  browseri.js  fileserve.js  indexNotes.mjs  indexOldJS.mjs  intake.js  require.js  require.mjs  requireCarducci.js  rollupCommon.js  shimm.mjs  taubify.js
src/notes/PHP/: ReadMe.md  index.php  package.json  rollup.config.js
src/notes/PHP/GNU/: ReadMe.md  m4.c
src/notes/PHP/XMLWriter/: composer.json  index.php
src/notes/PHP/built/: babelphp.mjs
src/notes/app/: deps.mjs  index.mjs  package.json  rollup.js
src/notes/builders/: browserify.js  package.json  rollup.config.js  rollup.mjs  webworkify.js
src/notes/dependencies/: index.mjs  shim.js  shimm.mjs
src/notes/old/: buildload.js  datamain.js  dependency.mjs  functions.mjs  indexDurable.mjs  module.mjs  requirecd.mjs
src/notes/requirecd/: context.mjs  index.mjs  makemap.mjs
src/notes/requirecd/dependency/: check.mjs  index.mjs
src/notes/requirecd/dependency/start/: help.mjs  index.mjs  module.mjs
src/notes/requirecd/dependency/utils/: index.mjs  nametourl.mjs  normalize.mjs
src/notes/requires/: require1.js  requireNoiifeapp.js  requirepre.js
src/notes/rollup/: helpers.mjs  index.js
src/rustuh/: denotract.rs  thoroughfare.rs
src/source/: ReadMe.md  backbank.php  composer.json  exec.c
src/source/eglue/: Cargo.toml  ReadMe.md  jfmast.rs  lib.rs  rust-toolchain.toml  swing.rs
src/source/eglue/bupkis/: dev.rs  mod.rs  null.rs
src/source/eglue/bupkis/mods/: mod.rs
src/source/eglue/bupkis/mods/utils/: mod.rs
src/source/eglue/collagen/: Cargo.toml  ReadMe.md  arguments.js  jfmast.rs  lib.rs
src/source/eglue/collagen/bupkis/: mod.js
src/source/eglue/collagen/marrow/: Cargo.toml  ReadMe.md  exec.c  lib.rs  rust-toolchain.toml
src/source/eglue/collagen/marrow/jfmast/: mod.rs  moda.rs  modb.rs  modc.rs  modf.rs
src/source/eglue/notes/: promise.rs  rollup.config.js
src/wasmuh/: eWAM.mjs  iWAM.mjs
worker-build/: Cargo.toml
worker-build/src/: main.rs
(+6 files in other folders)
